Move CEventNotifier class to xrCore and slightly refactoring it
This class can be useful in the other places of the engine. After the refactoring the callback is allowed to unsubscribe himself frm ProcessEvent - it won't cause immediate deleting the callback's instance. Callback will be deleted only after ProcessEvent is completed.

--- a/src/xrCore/xrCore.vcxproj
+++ b/src/xrCore/xrCore.vcxproj
@@ -364,6 +364,7 @@ call .GitInfo.cmd</Command>
     </ClInclude>
     <ClInclude Include="Debug\MiniDump.h" />
     <ClInclude Include="dump_string.h" />
+    <ClInclude Include="Events\Notifier.h" />
     <ClInclude Include="fastdelegate.h" />
     <CustomBuild Include="FileSystem.h" />
     <ClInclude Include="FileCRC32.h" />
