Revert "xrGame: fix some IK undefined reference"
This reverts commit 30d85f18e91716f7d03a96e9ede62f12442d2c9e.

--- a/src/xrGame/xrGame.vcxproj
+++ b/src/xrGame/xrGame.vcxproj
@@ -2537,13 +2537,13 @@
     <ClCompile Include="hud_item_object.cpp" />
     <ClCompile Include="IKFoot.cpp" />
     <ClCompile Include="IKLimbsController.cpp" />
-    <ClCompile Include="Ik\aint.cpp" />
+    <ClCompile Include="Ik\aint.cxx" />
     <ClCompile Include="Ik\Dof7control.cpp" />
-    <ClCompile Include="Ik\eqn.cpp" />
-    <ClCompile Include="Ik\eulersolver.cpp" />
+    <ClCompile Include="Ik\eqn.cxx" />
+    <ClCompile Include="Ik\eulersolver.cxx" />
     <ClCompile Include="Ik\IKLimb.cpp" />
-    <ClCompile Include="Ik\jtlimits.cpp" />
-    <ClCompile Include="Ik\limb.cpp" />
+    <ClCompile Include="Ik\jtlimits.cxx" />
+    <ClCompile Include="Ik\limb.cxx" />
     <ClCompile Include="Ik\math3d.cpp" />
     <ClCompile Include="Ik\mathTrig.cpp" />
     <ClCompile Include="ik_anim_state.cpp" />
