--- a/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj
+++ b/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj
@@ -221,6 +221,7 @@
     <ClCompile Include="gl_rendertarget_phase_accumulator.cpp" />
     <ClCompile Include="gl_rendertarget_phase_bloom.cpp" />
     <ClCompile Include="gl_rendertarget_phase_combine.cpp" />
+    <ClCompile Include="gl_rendertarget_phase_FXAA.cpp" />
     <ClCompile Include="gl_rendertarget_phase_flip.cpp" />
     <ClCompile Include="gl_rendertarget_phase_luminance.cpp" />
     <ClCompile Include="gl_rendertarget_phase_occq.cpp" />
