--- a/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
+++ b/src/Layers/xrRenderPC_GL/xrRender_GL.vcxproj.filters
@@ -645,6 +645,9 @@
     <ClCompile Include="gl_rendertarget_phase_ssao.cpp">
       <Filter>Core_Target</Filter>
     </ClCompile>
+    <ClCompile Include="gl_rendertarget_phase_FXAA.cpp">
+      <Filter>Core_Target</Filter>
+    </ClCompile>
     <ClCompile Include="..\xrRender\r__screenshot.cpp">
       <Filter>Core</Filter>
     </ClCompile>
