CMake: refactor defines according MSVS solution, remove windows-specific defines

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -83,7 +83,9 @@ set(LUA_FOUND true)
 
 message("CMake build ${CMAKE_BUILD_TYPE}, CFLAGS=${CMAKE_C_FLAGS}, CXXFLAGS=${CMAKE_CXX_FLAGS}")
 
-add_definitions(-D_MT -D_CPPUNWIND -DPURE_DYNAMIC_CAST -DDECLARE_SPECIALIZATION -DM_NOSTDCONTAINERS_EXT -DUSE_OGL)
+add_definitions(-D_MT -D_CPPUNWIND -DPURE_DYNAMIC_CAST -DDECLARE_SPECIALIZATION -DM_NOSTDCONTAINERS_EXT)
+add_definitions(-DLUABIND_DYNAMIC_LINK) #self-explanatory
+add_definitions(-DdSINGLE) # for ODE
 
 set(LUA_INCLUDE_DIR Externals/LuaJIT/src)
 
