--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,10 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/Externals/cryptopp/dsa.h)
     file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
     file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
 endif()
+if(EXISTS ${CMAKE_SOURCE_DIR}/sdk/include/tbb/tbb.h)
+    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/tbb)
+    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/serial/tbb)
+endif()
 find_package(GLEW REQUIRED)
 find_package(FreeImage REQUIRED)
 find_package(LockFile REQUIRED)
