Clang: use '-O0 -g' for clang, because '-Og' is only for GCC. Add option to use '-stdlib=libc++' with clang (cmake .. -DUSED_CXX_LIB=libcpp), but use '-stdlib=libstdc++' by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -66,7 +66,16 @@ if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
         message(FATAL_ERROR "Building with a gcc version less than 7.0 is not supported.")
     endif()
 elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++ -Wno-unused-command-line-argument -Wno-inconsistent-missing-override")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-command-line-argument -Wno-inconsistent-missing-override")
+    if(NOT USED_CXX_LIB)
+        set(USED_CXX_LIB "libstdcpp" CACHE STRING "" FORCE)
+    endif()
+    if(${USED_CXX_LIB} STREQUAL "libstdcpp")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libstdc++")
+    elseif(${USED_CXX_LIB} STREQUAL "libcpp")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++")
+        set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -stdlib=libc++ -lc++abi")
+    endif()
 endif()
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fpermissive -std=c++17 -Wno-attributes -pipe -Wl,--no-undefined -fvisibility=hidden")
@@ -89,7 +98,11 @@ endif()
 
 if(NOT ${CMAKE_BUILD_TYPE} STREQUAL "Release")
     # RelWithDebInfo or Debug
-    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og")
+    if(CMAKE_CXX_COMPILER_ID MATCHES "GNU")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Og")
+    elseif(CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+        set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -g")
+    endif()
 endif()
 
 if(${CMAKE_BUILD_TYPE} STREQUAL "Debug")
