Do not link against libtbb if NO_TBB_MALLOC is defined

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,10 +111,6 @@ if(EXISTS ${CMAKE_SOURCE_DIR}/Externals/cryptopp/dsa.h)
     file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
     file(MAKE_DIRECTORY ${CMAKE_SOURCE_DIR}/Externals/cryptopp)
 endif()
-if(EXISTS ${CMAKE_SOURCE_DIR}/sdk/include/tbb/tbb.h)
-    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/tbb)
-    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/serial/tbb)
-endif()
 find_package(GLEW REQUIRED)
 find_package(FreeImage REQUIRED)
 find_package(LockFile REQUIRED)
@@ -126,7 +122,13 @@ find_package(OGG REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(LZO REQUIRED)
 find_package(JPEG REQUIRED)
-find_package(TBB REQUIRED)
+if(NOT NO_TBB_MALLOC )
+  if(EXISTS ${CMAKE_SOURCE_DIR}/sdk/include/tbb/tbb.h)
+    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/tbb)
+    file(REMOVE_RECURSE ${CMAKE_SOURCE_DIR}/sdk/include/serial/tbb)
+  endif()
+  find_package(TBB REQUIRED)
+endif()
 endif()
 
 include_directories(${LUA_INCLUDE_DIR})
