--- a/src/xrGame/xrGame.vcxproj.filters
+++ b/src/xrGame/xrGame.vcxproj.filters
@@ -6467,6 +6467,9 @@
     <ClInclude Include="AnselManager.h">
       <Filter>Core\Client\Ansel</Filter>
     </ClInclude>
+    <ClInclude Include="ui\UILoadingScreenHardcoded.h">
+      <Filter>UI\Common\LoadingScreen</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="damage_manager.cpp">
@@ -9794,9 +9797,6 @@
     </ClCompile>
     <ClCompile Include="WeaponScript.cpp">
       <Filter>Core\Client\Objects\items &amp; weapons\Weapons\WeaponScript</Filter>
-    </ClCompile>
-    <ClCompile Include="ui\UILoadingScreenHardcoded.h">
-      <Filter>UI\Common\LoadingScreen</Filter>
     </ClCompile>
     <ClCompile Include="ui\UISleepStatic.cpp">
       <Filter>UI\UIWindows\Static</Filter>
